# tabby-interview

./: .gitignore  Cargo.toml  README.md
crates/ws-cli/: Cargo.toml
crates/ws-cli/src/: macros.rs  main.rs
crates/ws-common/: Cargo.toml
crates/ws-common/src/: error.rs  lib.rs  model.rs  shutdown.rs
crates/ws-receiver/: Cargo.toml
crates/ws-receiver/src/: connection.rs  fileio.rs  handler.rs  lib.rs  receiver.rs
crates/ws-sender/: Cargo.toml
crates/ws-sender/src/: connection.rs  fileio.rs  handler.rs  lib.rs  sender.rs
technical-writing/: README.md
