[workspace]
resolver = "2"
members = [
    "crates/ws-common",
    "crates/ws-sender",
    "crates/ws-receiver",
    "crates/ws-cli",
]
default-members = [
    "crates/ws-cli",
]

[workspace.dependencies]
tokio = { version = "1.32", features = ["full"] } # FIXME: full?
tokio-tungstenite = "0.20"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
walkdir = "2"
clap = { version = "4.3.23", features = ["derive"] }
