[package]
name = "ws-sender"
version = "0.1.0"
edition = "2021"

[dependencies]
ws-common = { path = "../ws-common" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
url = { workspace = true }
walkdir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }